Add initial implementation of timing and operation definitions in test_main.py
- Created a new test_main.py file to load configuration from config.yaml.
- Defined timing specifications using StateSeq for various operations.
- Implemented operation definitions for erase, program, and read commands.
- Introduced HostReq definitions for different request types.
- Added sample operations and basic scheduler setup (commented out).
- Created a new rules.yaml file for future configuration.

--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,9 @@
+Architecture:
+  num_dies               : 2
+  num_planes             : 4
+  num_blocks             : 10
+  pagesize               : 40
+
 TimeSpec:
   tERSL                  : 150000
   tPGMSL                 : 150000
