Enhance project structure by updating .gitignore to include new CSV and log file patterns; add CHECKLIST_1 and CHECKLIST_2 for improved documentation; introduce PLAN_DELETING_HOOKSCREEN and PLAN_EXITING_BOOTSTRAP for strategic planning; enhance nandsim_demo.py with bootstrap parameters and obligation logging features.

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ lib64
 pyvenv.cfg
 run_*
 hash_*
-nand_timeline.csv
-nand_violations.csv
-reject_log.csv
+nand_*.csv
+reject_*.csv
+stage_stats.csv
+obligation*.csv
+run*.log
+output.txt
